[gd_scene load_steps=6 format=2]

[ext_resource path="res://Arts/Scene/PHplate.png" type="Texture" id=1]
[ext_resource path="res://Objects/Sushi_Plate.gd" type="Script" id=2]
[ext_resource path="res://Arts/Sushi/PlaceHolderFish.jpg" type="Texture" id=3]
[ext_resource path="res://Scripts/DraggableArea2D.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 96.4413

[node name="Sushi_Plate" type="Node2D"]
script = ExtResource( 2 )

[node name="Plate" type="Sprite" parent="."]
modulate = Color( 0.886275, 0.886275, 0.886275, 1 )
z_index = 10
texture = ExtResource( 1 )

[node name="Sushi" type="Area2D" parent="."]
z_index = 12
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Sushi"]
scale = Vector2( 0.0915582, 0.0882503 )
z_index = 11
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sushi"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sushi"]
[connection signal="mouse_entered" from="Sushi" to="Sushi" method="_on_Sushi_Piece_mouse_entered"]
[connection signal="mouse_exited" from="Sushi" to="Sushi" method="_on_Sushi_Piece_mouse_exited"]
[connection signal="on_dragging" from="Sushi" to="." method="_on_Sushi_on_dragging"]
[connection signal="on_released" from="Sushi" to="." method="_on_Sushi_on_released"]
